// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={Object {}}
      >
        <div
          className="HoiPoi__InputGroup__root-1-0 HoiPoi__InputGroup__horizontal-1-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-1-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-1-45 HoiPoi__Link__small-1-49"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-1-3 HoiPoi__InputGroup__hidden-1-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-1-8 HoiPoi__Input__horizontal-1-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-1-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-1-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-1-30 HoiPoi__Input__Label-1-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-1-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-1-34 HoiPoi__Label__Text-1-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-1-12"
                  >
                    <input
                      className="HoiPoi__Input__input-1-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup is disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isDisabled={true}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={Object {}}
      >
        <div
          className="HoiPoi__InputGroup__root-2-0 HoiPoi__InputGroup__horizontal-2-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-2-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-2-45 HoiPoi__Link__small-2-49"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-2-3 HoiPoi__InputGroup__hidden-2-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-2-8 HoiPoi__Input__horizontal-2-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-2-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-2-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-2-30 HoiPoi__Input__Label-2-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-2-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-2-34 HoiPoi__Label__Text-2-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-2-12"
                  >
                    <input
                      className="HoiPoi__Input__input-2-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`InputGroup with values match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <InputGroup
        hideInputsLabel="Hide inputs"
        inputs={
          Array [
            Object {
              "label": "Lorem ipsum",
              "name": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "name": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "name": "lorem3",
            },
          ]
        }
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        overrides={Object {}}
        showInputsLabel="Show inputs"
        value={
          Object {
            "lorem": true,
            "lorem3": true,
          }
        }
      >
        <div
          className="HoiPoi__InputGroup__root-3-0 HoiPoi__InputGroup__horizontal-3-6"
        >
          <div
            className="HoiPoi__InputGroup__formControl-3-2"
          >
            <InputControl
              isReadOnly={false}
              label="Lorem ipsum"
              labelMode="horizontal"
              name="lorem"
              onBlur={[Function]}
              onChange={[Function]}
              onEnter={[Function]}
              onFocus={[Function]}
              value={true}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum"
                labelMode="horizontal"
                name="lorem"
                onBlur={[Function]}
                onChange={[Function]}
                onEnter={[Function]}
                onFocus={[Function]}
                override={Object {}}
                type="text"
                value={true}
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value={true}
                    />
                    <div
                      className="HoiPoi__Input__postComponent-3-27"
                    >
                      <span
                        className="HoiPoi__Input__postCloseComponent-3-28 HoiPoi__Input__isClickable-3-19 HoiPoi__Input__clear-3-20"
                        onClick={[Function]}
                      >
                        <Icon
                          name="close"
                          overrides={Object {}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-3-45 HoiPoi__Icon__medium-3-47"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <Close
                              color="#7d8a96"
                            >
                              <svg
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </Close>
                          </span>
                        </Icon>
                      </span>
                    </div>
                  </div>
                </div>
              </Input>
            </InputControl>
            <Link
              onClick={[Function]}
              overrides={Object {}}
              size="small"
            >
              <button
                className="HoiPoi__Link__root-3-52 HoiPoi__Link__small-3-56"
                onClick={[Function]}
                type="button"
              >
                Show inputs
              </button>
            </Link>
          </div>
          <div
            className="HoiPoi__InputGroup__inputsControl-3-3 HoiPoi__InputGroup__hidden-3-7"
          >
            <InputControl
              isReadOnly={false}
              key="lorem2"
              label="Lorem ipsum 2"
              labelMode="horizontal"
              name="lorem2"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 2"
                labelMode="horizontal"
                name="lorem2"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value=""
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum 2
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem2"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
            </InputControl>
            <InputControl
              isReadOnly={false}
              key="lorem3"
              label="Lorem ipsum 3"
              labelMode="horizontal"
              name="lorem3"
              onChange={[Function]}
              overrides={
                Object {
                  "Label": Object {
                    "classes": Object {
                      "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                    },
                  },
                }
              }
              value={true}
            >
              <Input
                isCopyable={false}
                isReadOnly={false}
                label="Lorem ipsum 3"
                labelMode="horizontal"
                name="lorem3"
                onBlur={[Function]}
                onChange={[Function]}
                override={Object {}}
                overrides={
                  Object {
                    "Label": Object {
                      "classes": Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      },
                    },
                  }
                }
                type="text"
                value={true}
              >
                <div
                  className="HoiPoi__Input__root-3-8 HoiPoi__Input__horizontal-3-24"
                >
                  <Label
                    className="HoiPoi__Input__Label-3-9"
                    classes={
                      Object {
                        "text": "HoiPoi__InputGroup__hiddenInputLabel-3-1",
                      }
                    }
                  >
                    <span
                      className="HoiPoi__Label__root-3-30 HoiPoi__Input__Label-3-9"
                    >
                      <Text
                        className="HoiPoi__Label__Text-3-31"
                        overrides={Object {}}
                      >
                        <span
                          className="HoiPoi__Text__root-3-34 HoiPoi__Label__Text-3-31"
                        >
                          Lorem ipsum 3
                        </span>
                      </Text>
                    </span>
                  </Label>
                  <div
                    className="HoiPoi__Input__formControl-3-12"
                  >
                    <input
                      className="HoiPoi__Input__input-3-13"
                      name="lorem3"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value={true}
                    />
                    <div
                      className="HoiPoi__Input__postComponent-3-27"
                    >
                      <span
                        className="HoiPoi__Input__postCloseComponent-3-28 HoiPoi__Input__isClickable-3-19 HoiPoi__Input__clear-3-20"
                        onClick={[Function]}
                      >
                        <Icon
                          name="close"
                          overrides={Object {}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-3-45 HoiPoi__Icon__medium-3-47"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <Close
                              color="#7d8a96"
                            >
                              <svg
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </Close>
                          </span>
                        </Icon>
                      </span>
                    </div>
                  </div>
                </div>
              </Input>
            </InputControl>
          </div>
        </div>
      </InputGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
